--- a/Poseidon.Archives.ClientDx/Poseidon.Archives.ClientDx.csproj
+++ b/Poseidon.Archives.ClientDx/Poseidon.Archives.ClientDx.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A471D3E6-53E2-4ED6-A507-C5F28E0E1C12}</ProjectGuid>
+    <ProjectGuid>{B635A418-6621-446A-94AB-44CBD99A07D6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Poseidon.Archives.Core</RootNamespace>
-    <AssemblyName>Poseidon.Archives.Core</AssemblyName>
+    <RootNamespace>Poseidon.Archives.ClientDx</RootNamespace>
+    <AssemblyName>Poseidon.Archives.ClientDx</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,18 +30,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MongoDB.Bson, Version=2.4.3.23, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MongoDB.Bson.2.4.3\lib\net45\MongoDB.Bson.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MongoDB.Driver, Version=2.4.3.23, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MongoDB.Driver.2.4.3\lib\net45\MongoDB.Driver.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MongoDB.Driver.Core, Version=2.4.3.23, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MongoDB.Driver.Core.2.4.3\lib\net45\MongoDB.Driver.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
+    <Reference Include="DevExpress.Data.v15.1, Version=15.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Printing.v15.1.Core, Version=15.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Sparkline.v15.1.Core, Version=15.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Utils.v15.1, Version=15.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraEditors.v15.1, Version=15.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="Poseidon.Base">
       <HintPath>..\..\Assembly\Poseidon.Base.dll</HintPath>
     </Reference>
@@ -51,38 +44,53 @@
     <Reference Include="Poseidon.Core">
       <HintPath>..\..\Assembly\Poseidon.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Poseidon.Data">
-      <HintPath>..\..\Assembly\Poseidon.Data.dll</HintPath>
+    <Reference Include="Poseidon.Winform.Base">
+      <HintPath>..\..\Assembly\Poseidon.Winform.Base.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.InteropServices.RuntimeInformation, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Runtime.InteropServices.RuntimeInformation.4.3.0\lib\net45\System.Runtime.InteropServices.RuntimeInformation.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
+    <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Remoting" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationClient" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BL\DirectoryBusiness.cs" />
-    <Compile Include="BL\DocumentBusiness.cs" />
-    <Compile Include="DAL\Mongo\DirectoryRepository.cs" />
-    <Compile Include="DAL\Mongo\DocumentRepository.cs" />
-    <Compile Include="DL\Directory.cs" />
-    <Compile Include="DL\Document.cs" />
-    <Compile Include="IDAL\IDirectoryRepository.cs" />
-    <Compile Include="IDAL\IDocumentRepository.cs" />
+    <Compile Include="Directory\FrmDirectoryAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Directory\FrmDirectoryAdd.Designer.cs">
+      <DependentUpon>FrmDirectoryAdd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Overview\FrmArchivesOverview.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Overview\FrmArchivesOverview.Designer.cs">
+      <DependentUpon>FrmArchivesOverview.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utility\ModelTypeCode.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config" />
+    <ProjectReference Include="..\Poseidon.Archives.Core\Poseidon.Archives.Core.csproj">
+      <Project>{a471d3e6-53e2-4ed6-a507-c5f28e0e1c12}</Project>
+      <Name>Poseidon.Archives.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Directory\FrmDirectoryAdd.resx">
+      <DependentUpon>FrmDirectoryAdd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Overview\FrmArchivesOverview.resx">
+      <DependentUpon>FrmArchivesOverview.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
