--- a/Poseidon.Archives.ClientDx/Poseidon.Archives.ClientDx.csproj
+++ b/Poseidon.Archives.ClientDx/Poseidon.Archives.ClientDx.csproj
@@ -35,6 +35,8 @@
     <Reference Include="DevExpress.Sparkline.v15.1.Core, Version=15.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Utils.v15.1, Version=15.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraEditors.v15.1, Version=15.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraLayout.v15.1, Version=15.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraTreeList.v15.1, Version=15.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="Poseidon.Base">
       <HintPath>..\..\Assembly\Poseidon.Base.dll</HintPath>
     </Reference>
@@ -64,11 +66,29 @@
     <Reference Include="UIAutomationClient" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Component\DirectoryTree.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Component\DirectoryTree.Designer.cs">
+      <DependentUpon>DirectoryTree.cs</DependentUpon>
+    </Compile>
     <Compile Include="Directory\FrmDirectoryAdd.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Directory\FrmDirectoryAdd.Designer.cs">
       <DependentUpon>FrmDirectoryAdd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Directory\FrmDirectoryManage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Directory\FrmDirectoryManage.Designer.cs">
+      <DependentUpon>FrmDirectoryManage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Overview\FrmArchivesManage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Overview\FrmArchivesManage.Designer.cs">
+      <DependentUpon>FrmArchivesManage.cs</DependentUpon>
     </Compile>
     <Compile Include="Overview\FrmArchivesOverview.cs">
       <SubType>Form</SubType>
@@ -85,12 +105,22 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Component\DirectoryTree.resx">
+      <DependentUpon>DirectoryTree.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Directory\FrmDirectoryAdd.resx">
       <DependentUpon>FrmDirectoryAdd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Directory\FrmDirectoryManage.resx">
+      <DependentUpon>FrmDirectoryManage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Overview\FrmArchivesManage.resx">
+      <DependentUpon>FrmArchivesManage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Overview\FrmArchivesOverview.resx">
       <DependentUpon>FrmArchivesOverview.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="Properties\licenses.licx" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
