--- a/Poseidon.Archives.Caller/Poseidon.Archives.Caller.csproj
+++ b/Poseidon.Archives.Caller/Poseidon.Archives.Caller.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A471D3E6-53E2-4ED6-A507-C5F28E0E1C12}</ProjectGuid>
+    <ProjectGuid>{DF684F13-473E-4C56-803A-8E1958343650}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Poseidon.Archives.Core</RootNamespace>
-    <AssemblyName>Poseidon.Archives.Core</AssemblyName>
+    <RootNamespace>Poseidon.Archives.Caller</RootNamespace>
+    <AssemblyName>Poseidon.Archives.Caller</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,16 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MongoDB.Bson, Version=2.4.3.23, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MongoDB.Bson.2.4.3\lib\net45\MongoDB.Bson.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MongoDB.Driver, Version=2.4.3.23, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MongoDB.Driver.2.4.3\lib\net45\MongoDB.Driver.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MongoDB.Driver.Core, Version=2.4.3.23, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MongoDB.Driver.Core.2.4.3\lib\net45\MongoDB.Driver.Core.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Poseidon.Base">
@@ -48,19 +40,13 @@
     <Reference Include="Poseidon.Common">
       <HintPath>..\..\Assembly\Poseidon.Common.dll</HintPath>
     </Reference>
-    <Reference Include="Poseidon.Core">
-      <HintPath>..\..\Assembly\Poseidon.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Poseidon.Data">
-      <HintPath>..\..\Assembly\Poseidon.Data.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.InteropServices.RuntimeInformation, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Runtime.InteropServices.RuntimeInformation.4.3.0\lib\net45\System.Runtime.InteropServices.RuntimeInformation.dll</HintPath>
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -69,28 +55,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BL\AttachmentBusiness.cs" />
-    <Compile Include="BL\DirectoryBusiness.cs" />
-    <Compile Include="BL\DocumentBusiness.cs" />
-    <Compile Include="DAL\Mongo\AttachmentRepository.cs" />
-    <Compile Include="DAL\Mongo\DirectoryRepository.cs" />
-    <Compile Include="DAL\Mongo\DocumentRepository.cs" />
-    <Compile Include="DL\Attachment.cs" />
-    <Compile Include="DL\Directory.cs" />
-    <Compile Include="DL\Document.cs" />
-    <Compile Include="IDAL\IAttachmentRepository.cs" />
-    <Compile Include="IDAL\IDirectoryRepository.cs" />
-    <Compile Include="IDAL\IDocumentRepository.cs" />
+    <Compile Include="Facade\IAttachmentService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utility\IAttachmentEntity.cs" />
-    <Compile Include="Utility\ModelTypeCode.cs" />
-    <Compile Include="Utility\UploadInfo.cs" />
+    <Compile Include="WebApiCaller\AttachmentService.cs" />
+    <Compile Include="WinformCaller\AttachmentService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Poseidon.Archives.Core\Poseidon.Archives.Core.csproj">
+      <Project>{a471d3e6-53e2-4ed6-a507-c5f28e0e1c12}</Project>
+      <Name>Poseidon.Archives.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
