--- a/Poseidon.Archives.UnitTest/Poseidon.Archives.UnitTest.csproj
+++ b/Poseidon.Archives.UnitTest/Poseidon.Archives.UnitTest.csproj
@@ -42,6 +42,8 @@
       <HintPath>..\..\Assembly\Poseidon.Common.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Web" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
