--- a/Poseidon.Archives.UnitTest/Poseidon.Archives.UnitTest.csproj
+++ b/Poseidon.Archives.UnitTest/Poseidon.Archives.UnitTest.csproj
@@ -72,6 +72,11 @@
       <Name>Poseidon.Archives.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
