--- a/Poseidon.Archives.ClientDx/Poseidon.Archives.ClientDx.csproj
+++ b/Poseidon.Archives.ClientDx/Poseidon.Archives.ClientDx.csproj
@@ -110,6 +110,12 @@
     <Compile Include="Document\FrmDocumentAdd.Designer.cs">
       <DependentUpon>FrmDocumentAdd.cs</DependentUpon>
     </Compile>
+    <Compile Include="Utility\FrmMultiUpload.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Utility\FrmMultiUpload.Designer.cs">
+      <DependentUpon>FrmMultiUpload.cs</DependentUpon>
+    </Compile>
     <Compile Include="Overview\FrmArchivesManage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -218,6 +224,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Utility\AttachmentTool.resx">
       <DependentUpon>AttachmentTool.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Utility\FrmMultiUpload.resx">
+      <DependentUpon>FrmMultiUpload.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Utility\FrmPreview.resx">
       <DependentUpon>FrmPreview.cs</DependentUpon>
