--- a/Poseidon.Archives.UnitTest/Poseidon.Archives.UnitTest.csproj
+++ b/Poseidon.Archives.UnitTest/Poseidon.Archives.UnitTest.csproj
@@ -53,7 +53,9 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
@@ -61,6 +63,7 @@
     <Compile Include="AttachmentServerTest.cs" />
     <Compile Include="AttachmentTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AttachmentWebTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Poseidon.Archives.Caller\Poseidon.Archives.Caller.csproj">
