Add Poseidon.Archives.Utility project.
Signed-off-by: robertzml <robertzml@126.com>

--- a/.gitignore
+++ b/.gitignore
@@ -287,3 +287,4 @@ __pycache__/
 *.odx.cs
 *.xsd.cs
 /Poseidon.Archives.ClientDx/Properties/*.licx
+/Poseidon.Archives.Utility/Properties/licenses.licx
