set module in header when upload file.
Signed-off-by: robertzml <robertzml@126.com>

--- a/Poseidon.Archives.Test/Poseidon.Archives.Test.csproj
+++ b/Poseidon.Archives.Test/Poseidon.Archives.Test.csproj
@@ -33,6 +33,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DevExpress.Data.v15.1, Version=15.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Utils.v15.1, Version=15.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraEditors.v15.1, Version=15.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraGrid.v15.1, Version=15.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraLayout.v15.1, Version=15.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="Poseidon.Archives.Caller, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Poseidon.Archives.Caller\bin\Debug\Poseidon.Archives.Caller.dll</HintPath>
+    </Reference>
     <Reference Include="Poseidon.Base">
       <HintPath>..\..\Assembly\Poseidon.Base.dll</HintPath>
     </Reference>
@@ -58,6 +67,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrmUploadTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmUploadTest.Designer.cs">
+      <DependentUpon>FrmUploadTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="GlobalAction.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -67,6 +82,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FrmUploadTest.resx">
+      <DependentUpon>FrmUploadTest.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -102,6 +120,10 @@
     <ProjectReference Include="..\Poseidon.Archives.Core\Poseidon.Archives.Core.csproj">
       <Project>{a471d3e6-53e2-4ed6-a507-c5f28e0e1c12}</Project>
       <Name>Poseidon.Archives.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Poseidon.Archives.Utility\Poseidon.Archives.Utility.csproj">
+      <Project>{C8422CFA-BB5A-4236-813F-3751606BDC2A}</Project>
+      <Name>Poseidon.Archives.Utility</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
