update nuget. update version to 1.2.
Signed-off-by: robertzml <robertzml@126.com>

--- a/Poseidon.Archives.Utility/Poseidon.Archives.Utility.csproj
+++ b/Poseidon.Archives.Utility/Poseidon.Archives.Utility.csproj
@@ -136,6 +136,7 @@
     <EmbeddedResource Include="Forms\FrmUpload.resx">
       <DependentUpon>FrmUpload.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Properties\licenses.licx" />
   </ItemGroup>
   <ItemGroup>
