--- a/Poseidon.Archives.ClientDx/Poseidon.Archives.ClientDx.csproj
+++ b/Poseidon.Archives.ClientDx/Poseidon.Archives.ClientDx.csproj
@@ -202,6 +202,7 @@
     <EmbeddedResource Include="Component\AttachmentGrid.resx">
       <DependentUpon>AttachmentGrid.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Properties\DataSources\Poseidon.Archives.Core.DL.Attachment.datasource" />
     <None Include="Properties\DataSources\Poseidon.Archives.Core.DL.Directory.datasource" />
     <None Include="Properties\DataSources\Poseidon.Archives.Core.DL.Document.datasource" />
