update attachment path. delete clientdx attahcment grid.
Signed-off-by: robertzml <robertzml@126.com>

--- a/Poseidon.Archives.Test/App.config
+++ b/Poseidon.Archives.Test/App.config
@@ -27,7 +27,7 @@
     <add key="DALPrefix" value="Mongo" />
 
     <!-- WebAPI服务地址 -->
-    <add key="ApiHost" value="http://localhost:4341/api/" />
+    <add key="ApiHost" value="http://210.28.16.82:6024/api/" />
 
     <add key="LogLevel" value="5" />
   </appSettings>
