--- a/Poseidon.Archives.Test/Poseidon.Archives.Test.csproj
+++ b/Poseidon.Archives.Test/Poseidon.Archives.Test.csproj
@@ -67,6 +67,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrmAttachmentFix.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmAttachmentFix.Designer.cs">
+      <DependentUpon>FrmAttachmentFix.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmUploadTest.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +88,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FrmAttachmentFix.resx">
+      <DependentUpon>FrmAttachmentFix.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmUploadTest.resx">
       <DependentUpon>FrmUploadTest.cs</DependentUpon>
     </EmbeddedResource>
