update to .net framework 4.7.2. update to devexpress 17.2.
Signed-off-by: robertzml <robertzml@126.com>

--- a/.gitignore
+++ b/.gitignore
@@ -288,3 +288,4 @@ __pycache__/
 *.xsd.cs
 /Poseidon.Archives.ClientDx/Properties/*.licx
 /Poseidon.Archives.Utility/Properties/licenses.licx
+/Poseidon.Archives.Test/Properties/licenses.licx
