--- a/Poseidon.Archives.UnitTest/App.config
+++ b/Poseidon.Archives.UnitTest/App.config
@@ -1,53 +1,53 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
   <connectionStrings>
-    <add name="sqlserver" providerName="System.Data.SqlClient" connectionString="Persist Security Info=False;Data Source=(local);Initial Catalog=Poseidon;Integrated Security=SSPI" />
-    <add name="mongodb" connectionString="mongodb://localhost:27017" />
+    <add name="sqlserver" providerName="System.Data.SqlClient" connectionString="Persist Security Info=False;Data Source=(local);Initial Catalog=Poseidon;Integrated Security=SSPI"/>
+    <add name="mongodb" connectionString="mongodb://localhost:27017"/>
   </connectionStrings>
   <appSettings>
     <!-- 应用程序名称 -->
-    <add key="ApplicationName" value="能源科信息管理系统" />
+    <add key="ApplicationName" value="能源科信息管理系统"/>
 
     <!-- 业务访问方式 -->
-    <add key="CallerType" value="win" />
+    <add key="CallerType" value="win"/>
 
     <!-- 数据库类型 -->
-    <add key="DbType" value="mongodb" />
+    <add key="DbType" value="mongodb"/>
 
     <!-- 读取字符串位置 -->
-    <add key="ConnectionSource" value="appconfig" />
+    <add key="ConnectionSource" value="appconfig"/>
 
     <!-- 数据库连接字符串键值 -->
-    <add key="DbConnection" value="mongodb" />
+    <add key="DbConnection" value="mongodb"/>
 
     <!-- 数据访问层名空间前缀 -->
-    <add key="DALPrefix" value="Mongo" />
+    <add key="DALPrefix" value="Mongo"/>
 
     <!-- WebAPI服务地址 -->
-    <add key="ApiHost" value="http://localhost:4341/api/" />
+    <add key="ApiHost" value="http://localhost:4341/api/"/>
 
-    <add key="LogLevel" value="5" />
+    <add key="LogLevel" value="5"/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Runtime.InteropServices.RuntimeInformation" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
+        <assemblyIdentity name="System.Runtime.InteropServices.RuntimeInformation" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="DnsClient" publicKeyToken="4574bb5573c51424" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.2.0.0" newVersion="1.2.0.0" />
+        <assemblyIdentity name="DnsClient" publicKeyToken="4574bb5573c51424" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.2.0.0" newVersion="1.2.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
